work/46/20ded6ce0b1eeb8d313125fd7dcc57/.command.log
  File "/home/ziygawish/curis-project/setup.py", line 73
    if __name__ == "__main__":
     ^
IndentationError: expected an indented block
